# projects

./: README.md
c_arduino_aquagrow/: README.md
c_arduino_aquagrow/main/: main.ino
cpp_console-program/: console.cpp
cpp_database_students/: Makefile  README.md  main.cpp
cpp_database_students/headers/: PGconnector.h  class_table.h
cpp_database_students/src/: PGconnector.cpp  class_table.cpp
cpp_database_students/utils/: Script.sql
cpp_filesystem_search/: ClassTimer.cpp  FileSearch.cpp  Makefile  README.md  main.cpp
cpp_filesystem_search/headers/: ClassTimer.h  FileSearch.h
cpp_openwrt_netrouter/: Makefile  README.md
cpp_openwrt_netrouter/src/: Makefile
cpp_openwrt_netrouter/src/image/: result.txt  traceroute.txt  usage.txt
cpp_openwrt_netrouter/src/include/: ascii_art.h  logger_net.h  print_logo.h  print_table.h  raw_socket.h  trace_route.h
cpp_openwrt_netrouter/src/source/: logger_net.cpp  print_logo.cpp  print_table.cpp  raw_socket.cpp  run_project.cpp  trace_route.cpp
cpp_qml_blackjack/: README.md
cpp_qml_blackjack/BlackJack/: CMakeLists.txt  Main.qml  cardmanager.cpp  cardmanager.h  main.cpp
cpp_socketRaw_console/GLvariant3/: Makefile
cpp_socketRaw_console/GLvariant3/audio/: audio.cpp  audio.h
cpp_socketRaw_console/GLvariant3/client/: runClient.cpp
cpp_socketRaw_console/GLvariant3/docs/: LICENSE  README.md
cpp_socketRaw_console/GLvariant3/includes/: client.h  colors.h  logger.h  proxy.h  server.h  utils.h
cpp_socketRaw_console/GLvariant3/linux/: settingsOS.cpp  settingsOS.h
cpp_socketRaw_console/GLvariant3/middleware/: runProxy.cpp
cpp_socketRaw_console/GLvariant3/mvp/: client.cpp  package.h  proxy.cpp  server.cpp  utils.h
cpp_socketRaw_console/GLvariant3/package/: package.cpp  package.h
cpp_socketRaw_console/GLvariant3/server/: runServer.cpp
cpp_socketRaw_console/GLvariant3/sources/: searcher.cpp  searcher.h
cpp_socketRaw_console/GLvariant3/tools/: client.cpp  logger.cpp  proxy.cpp  server.cpp  utils.cpp
cpp_socket_console/: Makefile
cpp_socket_console/GLvariant1/: .gitignore  Makefile
cpp_socket_console/GLvariant1/client/: run_client.cpp
cpp_socket_console/GLvariant1/includes/: client.h  console_colors.h  logger.h  packages.h  searcher.h  server.h
cpp_socket_console/GLvariant1/server/: run_server.cpp
cpp_socket_console/GLvariant1/template/: images.cpp
cpp_socket_console/GLvariant1/tools/: client.cpp  logger.cpp  searcher.cpp  server.cpp
cpp_socket_console/GLvariant2/: Makefile
cpp_socket_console/GLvariant2/client/: client.cpp  client.h  runClient.cpp
cpp_socket_console/GLvariant2/docs/: LICENSE  README.md
cpp_socket_console/GLvariant2/include/process/: ProcessManager.h
cpp_socket_console/GLvariant2/server/: runServer.cpp  server.cpp  server.h
cpp_socket_console/GLvariant2/src/process/: ProcessManager.cpp
cpp_socket_console/client/: client.cpp
cpp_socket_console/docs/: README.md
cpp_socket_console/includes/: packages.h  utils.h
cpp_socket_console/server/: server.cpp
cpp_socket_console/template/: images.cpp
cpp_socket_console/tools/: searcher.cpp  utils.cpp
cpp_socket_fileSearch/client/: client.cpp
cpp_socket_fileSearch/docs/: socket.txt
cpp_socket_qt/GLvariant1/: CMakeLists.txt
cpp_socket_qt/GLvariant1/include/: packages.h
cpp_socket_qt/GLvariant1/qml/: Main.qml
cpp_socket_qt/GLvariant1/res/: resources.qrc
cpp_socket_qt/GLvariant1/src/: main.cpp
cpp_socket_qt/GLvariant1/src/utils/: client.cpp  client.h  server.cpp  server.h
django_quotes/: README.md  requirements.txt
django_quotes/website/quotes/: forms.py  models.py  views.py
django_quotes/website/quotes/migrations/: 0004_alter_author_picture.py  0005_alter_author_picture.py
django_quotes/website/users/: forms.py
django_quotes/website/utils/: quotes.json
fastapi_auth/: .env  README.md  docker-compose.yml  fly.toml  pyproject.toml
fastapi_auth/src/conf/: config.py
fastapi_auth/src/database/: models.py
fastapi_auth/src/repository/: comments.py  ratings.py  search.py  tags.py  users.py
fastapi_auth/src/routes/: ratings.py  search.py  transformed_images.py
fastapi_auth/src/schemas/: image_schemas.py  tag_schemas.py
fastapi_auth/src/services/: auth.py  email.py  transformed_image.py
fastapi_auth/src/services/templates/: email_template.html
fastapi_auth/tests/: test_repository_search.py
lnx_raspberry_raspwave/: README.md
lnx_raspberry_webserver/: README.md
new_project/: .env  main.py
new_project/database/: models.py  vacancies.json
new_project/migrations/versions/: 0db6c3afad5b_init.py
py_aiogram_linux/: .env.example  .gitignore  Dockerfile  readme.md  requirements.txt  script.py
py_caesars_cipher/: caesars_cipher.py
py_ciphers/py_caesars_cipher/: caesars_cipher.py
py_ciphers/py_vigener_cipher/: vigener_cipher.py
py_django_quotes/website/: db.sqlite3
py_django_quotes/website/quotes/: urls.py  utils.py
py_django_quotes/website/quotes/migrations/: 0001_initial.py  0002_picture.py  0003_delete_picture_author_picture.py
py_django_quotes/website/quotes/templatetags/: extract.py
py_django_quotes/website/users/: urls.py  views.py
py_django_quotes/website/utils/: add_quotes_to_mongo.py  migration.py
py_django_quotes/website/website/: settings.py  urls.py
py_djinni_parser/: pyproject.toml  test.py
py_fastapi_auth/: LICENSE  main.py  requirements.txt
py_fastapi_auth/src/repository/: images.py  transformed_images.py
py_fastapi_auth/src/routes/: auth.py  comments_routes.py  images.py  tags.py  users.py
py_fastapi_auth/src/schemas/: user_schemas.py
py_fastapi_auth/src/services/: images.py
py_fastapi_auth/tests/: test_rep_users.py  test_repo_images.py  test_rout_users.py
py_openai_text/: kursova.py  text.txt
py_parser_djinni/migrations/: env.py
py_pygame_AlienInvasion/FilePY/: project_ai.py  project_ai_class.py
py_selection_cipher/: selection_cipher.py
py_selenium_djinni/database/: db.py  ddl.py
py_telegrambot_linux/: run_bot.py
py_telegrambot_schedule/: main.py  messages.py  settings.ini  stickers_emojis.py  test.py
py_vigener_cipher/: vigener_cipher.py
(+34 files in other folders)
